--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1424,7 +1424,7 @@
   url = {https://www.biorxiv.org/content/10.1101/2019.12.19.882357v1},
   urldate = {2020-10-01},
   abstract = {{$<$}h3{$>$}Abstract{$<$}/h3{$>$} {$<$}p{$>$}Microclimatic variability in tropical forests plays a key role in shaping species distributions and their ability to cope with environmental change, especially for ectotherms. Yet, currently available climatic datasets lack data from the forest interior and our knowledge of thermal tolerance among tropical ectotherms is limited. To tackle this, we studied natural variation in the microclimate experienced by a tropical genus of butterflies (\emph{Heliconius} sp.) along their Andean range across a single year. We found that the forest strongly buffers temperature and humidity in the understory, especially in the lowlands where temperatures are more extreme. There were systematic differences between our yearly records and macroclimate databases (WorldClim2), with lower interpolated minimum temperatures and maximum temperatures higher than expected. We then assessed thermal tolerance of ten \emph{Heliconius} butterfly species in the wild and showed that populations at high elevations had significantly lower heat tolerance than those at lower elevations. However, when we reared populations of the widespread \emph{H. erato} from high and low elevations in a common-garden environment, the difference in heat tolerance across elevations was reduced, indicating plasticity in this trait. Microclimate buffering is not currently captured in publicly available datasets but could be crucial for enabling upland shifting of species sensitive to heat such as highland \emph{Heliconius}. Plasticity in thermal tolerance may alleviate the effects of global warming on some widespread ectotherm species, but more research is needed to understand the long-term consequences of plasticity on populations and species.{$<$}/p{$><$}h3{$>$}Summary statement{$<$}/h3{$>$} {$<$}p{$>$}Tropical forests along the Andes were found to greatly buffer climate. The butterflies inhabiting high elevations were less thermally tolerant but not when reared in common-garden conditions, indicating plasticity.{$<$}/p{$>$}},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\V4T3ZLUX\\Montejo-Kovacevich et al. - 2019 - Microclimate buffering and thermal tolerance acros.pdf},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\V4T3ZLUX\\Montejo-Kovacevich et al. - 2019 - Microclimate buffering and thermal tolerance acros.pdf;C\:\\Users\\Me\\Zotero\\storage\\A7MKX6CF\\2019.12.19.882357v1.html},
   langid = {english}
 }
 
